--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body{
 
 .nav-header{
     min-height: 10vh;
-    font-size: 1rem;
+    font-size: 0.9rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,6 +52,113 @@ body{
     align-items: center;
     flex: 1;
     flex-basis: 25rem;
-    padding: 5rem;
-    
+    padding: 10rem 3rem;
+    position: relative;
+}
+
+.hero-img{
+    position: relative;
+    flex: 1;
+    flex-basis: 20rem;
+}
+
+.hero-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.fashion-span{
+    color: rgb(255, 139, 93);
+}
+
+.mountain-span{
+    color: rgb(86, 124, 228);
+}
+
+.hike-span{ 
+    color: rgb(167, 110, 231);
+}
+
+.hero-desc h2{
+    font-family: 'Abril Fatface';
+    font-size: 3.5rem;
+}
+
+.hero-desc p{
+    padding: 3rem 0rem;
+    font-size: 1rem;
+    color: rgb(223, 223, 223);
+}
+
+.explore{
+    padding: 0.8rem 1.6rem;
+    background: none;
+    border: none;
+    color: white;
+    border: 1px solid white;
+    font-size: 0.8rem;
+    text-decoration: none;
+    cursor: pointer;
+    align-self: flex-start;
+}
+
+.nav-bar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1;
+    opacity: 1;
+    clip-path: circle(50px at 100% -10%);
+    -webkit-clip-path: circle(50px at 100% -10%);
+}
+
+.burger{
+    cursor: pointer;
+}
+
+.nav-links{
+    font-size: 2rem;
+    flex-basis: 30rem;
+}
+
+.nav-links h3{
+    padding: 2rem 0rem;
+}
+
+.contact{
+    flex-basis: 30rem;
+}
+
+.contact h2{
+    font-size: 2rem;
+    padding: 2rem 0rem;
+}
+
+.contact p{
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+}
+
+.reveal-img, .reveal-text{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #17181a ;
+    left: 0;
+    top: 0;
+}
+
+.cursor{
+    width: 3rem;
+    height: 3rem;
+    border: 2xp solid white;
+    border-radius: 50%;
+    position: absolute;
 }
